// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "cyberport",
      "name": "CyberPort",
      "products": [
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-laptop",
            "products": [
              {
                "name": "TODO: name of product laptop",
                "upc": "laptop",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product laptop",
          "upc": "laptop",
        },
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-computer",
            "products": [
              {
                "name": "TODO: name of product computer",
                "upc": "computer",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product computer",
          "upc": "computer",
        },
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-headset",
            "products": [
              {
                "name": "TODO: name of product headset",
                "upc": "headset",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product headset",
          "upc": "headset",
        },
      ],
    },
  },
  "explain": [
    {
      "data": {
        "storefront": {
          "id": "cyberport",
          "name": "CyberPort",
          "products": [
            {
              "upc": "laptop",
            },
            {
              "upc": "computer",
            },
            {
              "upc": "headset",
            },
          ],
        },
      },
      "includes": [
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-laptop",
                "products": [
                  {
                    "name": "TODO: name of product laptop",
                    "upc": "laptop",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product laptop",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-laptop",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                0,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-laptop",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            0,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "laptop",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-computer",
                "products": [
                  {
                    "name": "TODO: name of product computer",
                    "upc": "computer",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product computer",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-computer",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                1,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-computer",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            1,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "computer",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-headset",
                "products": [
                  {
                    "name": "TODO: name of product headset",
                    "upc": "headset",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product headset",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-headset",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                2,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-headset",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            2,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "headset",
          },
        },
      ],
      "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
      "path": [
        "storefront",
      ],
      "private": [],
      "public": [
        "id",
        "name",
        "products.upc",
      ],
      "variables": {
        "id": "2",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "fields": [
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "id",
              "type": "ID",
            },
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "name",
              "type": "String",
            },
            {
              "fields": [
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "upc",
                  "type": "ID",
                },
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "name",
                  "type": "String",
                },
                {
                  "fields": [
                    {
                      "fields": [
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "upc",
                          "type": "ID",
                        },
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "name",
                          "type": "String",
                        },
                      ],
                      "inlineVariables": {},
                      "isList": true,
                      "isListItemNonNull": false,
                      "isNonNull": true,
                      "kind": "composite",
                      "name": "products",
                      "type": "Product",
                    },
                    {
                      "inlineVariables": {},
                      "isNonNull": true,
                      "kind": "scalar",
                      "name": "name",
                      "type": "String",
                    },
                  ],
                  "inlineVariables": {},
                  "isList": false,
                  "isListItemNonNull": false,
                  "isNonNull": false,
                  "kind": "composite",
                  "name": "manufacturer",
                  "type": "Manufacturer",
                },
              ],
              "inlineVariables": {},
              "isList": true,
              "isListItemNonNull": false,
              "isNonNull": true,
              "kind": "composite",
              "name": "products",
              "type": "Product",
            },
          ],
          "inlineVariables": {
            "id": "2",
          },
          "isList": false,
          "isListItemNonNull": false,
          "isNonNull": false,
          "kind": "composite",
          "name": "storefront",
          "type": "Storefront",
        },
      ],
      "name": "NotBasicWithInlineVariables",
      "resolvers": [
        {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "typeOrField": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "typeOrField": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "2",
          },
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "storefront",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "storefront",
    "storefront.id",
    "storefront.name",
    "storefront.products",
    "storefront.products.upc",
    "storefront.products.name",
    "storefront.products.manufacturer",
    "storefront.products.manufacturer.products",
    "storefront.products.manufacturer.products.upc",
    "storefront.products.manufacturer.products.name",
    "storefront.products.manufacturer.name",
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "2") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "cyberport",
      "name": "CyberPort",
      "products": [
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-laptop",
            "products": [
              {
                "name": "TODO: name of product laptop",
                "upc": "laptop",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product laptop",
          "upc": "laptop",
        },
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-computer",
            "products": [
              {
                "name": "TODO: name of product computer",
                "upc": "computer",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product computer",
          "upc": "computer",
        },
        {
          "manufacturer": {
            "name": "TODO: name of manufacturer manufacturer-of-headset",
            "products": [
              {
                "name": "TODO: name of product headset",
                "upc": "headset",
              },
              {
                "name": "TODO: name of product otherthing",
                "upc": "otherthing",
              },
            ],
          },
          "name": "TODO: name of product headset",
          "upc": "headset",
        },
      ],
    },
  },
  "explain": [
    {
      "data": {
        "storefront": {
          "id": "cyberport",
          "name": "CyberPort",
          "products": [
            {
              "upc": "laptop",
            },
            {
              "upc": "computer",
            },
            {
              "upc": "headset",
            },
          ],
        },
      },
      "includes": [
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-laptop",
                "products": [
                  {
                    "name": "TODO: name of product laptop",
                    "upc": "laptop",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product laptop",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-laptop",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                0,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-laptop",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            0,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "laptop",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-computer",
                "products": [
                  {
                    "name": "TODO: name of product computer",
                    "upc": "computer",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product computer",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-computer",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                1,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-computer",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            1,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "computer",
          },
        },
        {
          "data": {
            "product": {
              "manufacturer": {
                "id": "manufacturer-of-headset",
                "products": [
                  {
                    "name": "TODO: name of product headset",
                    "upc": "headset",
                  },
                  {
                    "name": "TODO: name of product otherthing",
                    "upc": "otherthing",
                  },
                ],
              },
              "name": "TODO: name of product headset",
            },
          },
          "includes": [
            {
              "data": {
                "manufacturer": {
                  "name": "TODO: name of manufacturer manufacturer-of-headset",
                },
              },
              "includes": [],
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "path": [
                "storefront",
                "products",
                2,
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "variables": {
                "Manufacturer_id": "manufacturer-of-headset",
              },
            },
          ],
          "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "path": [
            "storefront",
            "products",
            2,
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "variables": {
            "Product_upc": "headset",
          },
        },
      ],
      "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
      "path": [
        "storefront",
      ],
      "private": [],
      "public": [
        "id",
        "name",
        "products.upc",
      ],
      "variables": {
        "id": "2",
      },
    },
  ],
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "fields": [
        {
          "fields": [
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "id",
              "type": "ID",
            },
            {
              "inlineVariables": {},
              "isNonNull": true,
              "kind": "scalar",
              "name": "name",
              "type": "String",
            },
            {
              "fields": [
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "upc",
                  "type": "ID",
                },
                {
                  "inlineVariables": {},
                  "isNonNull": true,
                  "kind": "scalar",
                  "name": "name",
                  "type": "String",
                },
                {
                  "fields": [
                    {
                      "fields": [
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "upc",
                          "type": "ID",
                        },
                        {
                          "inlineVariables": {},
                          "isNonNull": true,
                          "kind": "scalar",
                          "name": "name",
                          "type": "String",
                        },
                      ],
                      "inlineVariables": {},
                      "isList": true,
                      "isListItemNonNull": false,
                      "isNonNull": true,
                      "kind": "composite",
                      "name": "products",
                      "type": "Product",
                    },
                    {
                      "inlineVariables": {},
                      "isNonNull": true,
                      "kind": "scalar",
                      "name": "name",
                      "type": "String",
                    },
                  ],
                  "inlineVariables": {},
                  "isList": false,
                  "isListItemNonNull": false,
                  "isNonNull": false,
                  "kind": "composite",
                  "name": "manufacturer",
                  "type": "Manufacturer",
                },
              ],
              "inlineVariables": {},
              "isList": true,
              "isListItemNonNull": false,
              "isNonNull": true,
              "kind": "composite",
              "name": "products",
              "type": "Product",
            },
          ],
          "inlineVariables": {},
          "isList": false,
          "isListItemNonNull": false,
          "isNonNull": false,
          "kind": "composite",
          "name": "storefront",
          "type": "Storefront",
        },
      ],
      "name": "NotBasicWithOperationVariables",
      "resolvers": [
        {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "typeOrField": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "typeOrField": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {},
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "storefront",
          "variables": {},
        },
      ],
      "type": "query",
    },
  ],
  "paths": [
    "storefront",
    "storefront.id",
    "storefront.name",
    "storefront.products",
    "storefront.products.upc",
    "storefront.products.name",
    "storefront.products.manufacturer",
    "storefront.products.manufacturer.products",
    "storefront.products.manufacturer.products.upc",
    "storefront.products.manufacturer.products.name",
    "storefront.products.manufacturer.name",
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > should plan schema 1`] = `
{
  "compositeTypes": {
    "Manufacturer": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
              "typeOrField": "id",
            },
            "products": {
              "source": "products",
              "typeOrField": "id",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
              "typeOrField": "name",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "products",
            },
          },
        },
      },
      "name": "Manufacturer",
      "resolvers": {
        "manufacturers": {
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "manufacturers",
          "type": "Manufacturer",
          "typeOrField": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
        "products": {
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { _manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "products",
          "type": "Manufacturer",
          "typeOrField": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
      },
    },
    "Product": {
      "fields": {
        "manufacturer": {
          "name": "manufacturer",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "manufacturer",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "name",
            },
          },
        },
        "price": {
          "name": "price",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "price",
            },
          },
        },
        "upc": {
          "name": "upc",
          "sources": {
            "products": {
              "source": "products",
              "typeOrField": "upc",
            },
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "upc",
            },
          },
        },
      },
      "name": "Product",
      "resolvers": {
        "products": {
          "operation": "query ProductByUpc($Product_upc: ID!) { product(upc: $Product_upc) { ...__export } }",
          "source": "products",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
        "storefronts": {
          "operation": "TODO",
          "source": "storefronts",
          "type": "Product",
          "typeOrField": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
      },
    },
    "Storefront": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "id",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "name",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "storefronts": {
              "source": "storefronts",
              "typeOrField": "products",
            },
          },
        },
      },
      "name": "Storefront",
      "resolvers": {
        "storefronts": {
          "operation": "query StorefrontById($Storefront_id: ID!) { storefront(id: $Storefront_id) { ...__export } }",
          "source": "storefronts",
          "type": "Storefront",
          "typeOrField": "Storefront",
          "variables": {
            "Storefront_id": {
              "name": "Storefront_id",
              "select": "id",
            },
          },
        },
      },
    },
  },
  "operations": {
    "query": {
      "fields": {
        "_manufacturer": {
          "name": "_manufacturer",
          "resolvers": {
            "products": {
              "operation": "query _manufacturer($id: ID!) { _manufacturer(id: $id) { ...__export } }",
              "source": "products",
              "type": "Manufacturer",
              "typeOrField": "_manufacturer",
              "variables": {},
            },
          },
        },
        "manufacturer": {
          "name": "manufacturer",
          "resolvers": {
            "manufacturers": {
              "operation": "query manufacturer($id: ID!) { manufacturer(id: $id) { ...__export } }",
              "source": "manufacturers",
              "type": "Manufacturer",
              "typeOrField": "manufacturer",
              "variables": {},
            },
          },
        },
        "product": {
          "name": "product",
          "resolvers": {
            "products": {
              "operation": "query product($upc: ID!) { product(upc: $upc) { ...__export } }",
              "source": "products",
              "type": "Product",
              "typeOrField": "product",
              "variables": {},
            },
          },
        },
        "storefront": {
          "name": "storefront",
          "resolvers": {
            "storefronts": {
              "operation": "query storefront($id: ID!) { storefront(id: $id) { ...__export } }",
              "source": "storefronts",
              "type": "Storefront",
              "typeOrField": "storefront",
              "variables": {},
            },
          },
        },
      },
      "name": "query",
    },
  },
}
`;

exports[`should build proper operation and find __export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  id
  name
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find __export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        ...__export
      }
    }
  }
}

fragment __export on Manufacturer {
  id
  name
  products {
    manufacturer {
      location
    }
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find __export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find __export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
